[package]
name = "pali-server"
version = "0.1.0"
edition = "2021"
authors = ["Yuvinscria Werdxz <werdxz@werdxz.info>"]
description = "Self-hosted todo server with API key authentication for Cloudflare Workers"
repository = "https://github.com/pali-org/server"
license = "MIT"
keywords = ["todo", "cloudflare", "workers", "self-hosted", "api"]
categories = ["web-programming", "api-bindings"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["json", "query"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
hex = "0.4"
